# iris_classification

./: .Makefile.swp  Makefile  README.md  pyproject.toml
iris_classification/: .main.py.swp  main.py  main.py.save
tests/: test_iris_classification.py
