[tool.poetry]
name = "iris-classification"
version = "0.1.0"
description = ""
authors = ["Dani <danieldelapenaglez@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.6"
scipy = "^1.6.2"
matplotlib = "^3.4.1"
pandas = "^1.2.3"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
